# api

./: .env.example  .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
migrations/2022-09-21-031359_create_users/: up.sql
sql/: collect_user.sql  create_user.sql  get_user.sql  get_user_by_token.sql  up.sql  update_upgrade_user.sql  upgrade_user.sql  users.sql
src/: auth.rs  config.rs  db.rs  errors.rs  main.rs  models.rs  prelude.rs  routes.rs  schema.rs  show_users.rs  utils.rs
