[package]
name = "idle_game_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
warp = "0.3"
dotenv = "0.15"
rust-crypto = "0.2.36"
serde = { version = "1", features = ["derive"] }
derive_more = "0.99.17"
tokio-postgres = "0.7"
deadpool-postgres = "0.10.2"
tokio-pg-mapper = "0.2"
tokio-pg-mapper-derive = "0.2"
async-trait = "0.1.56"
base64 = "0.13.0"